syntax = "proto3";

package transactions;
option java_package = "com.demobanking.events";

// The Command: Transaction Orchestrator -> Transaction Service
message CreateTransactionCommand {
  string saga_id = 1;
  string account_number = 2;
  string correlation_id = 3;
  TransactionType transaction_type = 4;
  string transaction_state = 5;
  string description = 6;
}
enum TransactionType {
    DEBIT = 0;
    CREDIT = 1;
    TRANSFER = 2;
}

// The Event: Transaction Service -> Transaction Orchestrator
enum TransactionState {
    TRAN_INITIATED = 0;
    TRAN_PROCESSING = 1;
    TRAN_COMPLETED = 2;
    TRAN_REJECTED = 3;
    TRAN_CANCELLED = 4;
}

message TransactionCreatedEvent {
  string saga_id = 1;
  string source_account_number = 2;
  string destination_account_number = 3;
  string correlationId = 4;
  TransactionType transaction_type = 5;
  TransactionState transactionState = 6;
  string amount = 7;
  string description = 8;
}

message TransactionRequest {
  string source_account_number = 1;
  string destination_account_number = 2;
  TransactionType transaction_type = 3;
  string amount = 4;
  string description = 5;
}

message TransferCommand {
  string saga_id = 1;
  string correlationId = 2;
  string source_account_number = 3;
  string destination_account_number = 4;
  string amount = 5;
  string description = 6;
}